# onoma.nvim

./: .gitignore  .stylua.toml  LICENSE.md  README.md  build.lua  lazy.lua  typos.toml
.github/: CODEOWNERS  dependabot.yml  release-drafter.yml
.github/workflows/: build.yml  nightly.yml  release-drafter.yml  spellcheck.yml  vim-docs.yml
bridge/: Cargo.toml  build.rs  rust-toolchain.toml
bridge/src/: lib.rs
bridge/src/logger/: mod.rs  wrapper.rs
bridge/src/resolver/: mod.rs  wrapper.rs
bridge/src/watcher/: mod.rs  wrapper.rs
doc/: onoma.nvim.txt
lua/: config.lua  constant.lua  onoma.lua
lua/bridge/: download.lua  git.lua  utils.lua
lua/providers/snacks/: finder.lua  format.lua  provider.lua
lua/providers/telescope/: finder.lua  format.lua  provider.lua
lua/snacks/: finder.lua  source.lua
lua/telescope/_extensions/: onoma.lua
lua/utils/: async.lua  buffer.lua  log.lua  onoma.lua  osc.lua  types.lua
