[package]
name = "onoma-bridge"
version = "0.0.3"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
flexi_logger = "0.31.7"
log = "0.4.28"
mlua = { version = "0.11.5", features = [
    "luajit",
    "module",
    "async",
    "macros",
] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
onoma = "0.0.3"
futures = "0.3.31"
xdir = "0.1.0"
tokio-stream = { version = "0.1.17", features = ["sync"] }
