[package]
name = "onoma-bridge"
version = "0.0.12"
edition = "2024"
rust-version = "1.88.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
flexi_logger = "0.31.8"
log = "0.4.28"
mlua = { version = "0.11.6", features = [
    "luajit",
    "module",
    "async",
    "macros",
] }
thiserror = "2.0.17"
tokio = { version = "1.51.0", features = ["rt", "rt-multi-thread", "macros"] }
onoma = "0.0.12"
futures = "0.3.32"
xdir = "0.1.0"
tokio-stream = { version = "0.1.18", features = ["sync"] }
